--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-notion-x": "^6.16.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^4.12.10",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
   }
